Add project management features: individual project pages, GitHub links, admin manage/edit pages, and full-width layouts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build --turbopack",
     "build:safe": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:db": "node test-connection.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
